--- a/backend/package.json
+++ b/backend/package.json
@@ -7,15 +7,15 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "@prisma/client": "^5.0.0",
+    "express": "^4.18.2",
     "pg": "^8.0.0"
   },
   "devDependencies": {
-    "prisma": "^5.0.0",
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.0.0",
+    "prisma": "^5.0.0"
   },
   "type": "module"
 }
